# Jovenes-Al-Ruedo

./: README.md  docker-compose.yml  generate_all_docs.py
.github/: copilot-instructions.md
_docs/: api-endpoints.md  architecture.md  database-schema.md
be/: .dockerignore  .env.example  Dockerfile  alembic_output.txt  check_db.py  check_db2.py  entrypoint.sh  pyproject.toml  seed_web_db.py  test_cors.py  test_full_chat.py  test_get_chat.py  test_mensajes.py  test_post.py  test_pydantic.py  test_user_features.py  users_dump.txt
be/alembic/: env.py
be/alembic/versions/: 090556402208_change_enlace_portafolio_to_id_.py  0e275399726b_add_role_and_sector.py  2d6de4d76c77_add_chat_mensaje_model.py  56ac9c136535_add_portafolio_and_convocatorias_.py  9c610dcaeb9c_add_habilidades_portafolio_conv_.py  ab3d782f3aa0_add_age_and_artistic_area_to_users.py  c1d2e3f4b5a6_add_birth_date_to_users.py  ecc79ba49269_add_conversacion_table_refactor_chat.py  f1a2b3c4d5e6_add_bio_location_to_users.py
be/app/: config.py  dependencies.py  main.py
be/app/core/: __init__.py  cookies.py  privacy.py
be/app/models/: __init__.py  chat.py  conv.py  conversacion.py  habilidad.py  password_reset_token.py  portafolio.py  rel_usr_hab.py  user.py
be/app/routers/: auth.py  chat.py  convocatorias.py  portafolio.py  upload.py  users.py
be/app/schemas/: chat.py  conv.py  convocatoria.py  habilidad.py  portafolio.py  user.py
be/app/services/: auth_service.py
be/app/tests/: conftest.py  test_auth.py  test_chat.py
db/: README.md  queries.sql  schema.sql  seed.sql
docs/: guion-video.md
(+113 files in other folders)
